<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cheapest_tickets"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mohamed.fligthapp.CheapestTicketsFragment"
    tools:showIn="@layout/activity_cheapest_tickets">

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/origin_name"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:id="@+id/ct_origin_editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/destination_name"
        android:ems="10"
        android:layout_below="@+id/ct_origin_editText"
        android:layout_marginTop="10dp"
        android:id="@+id/ct_destination_editText" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_today"
        android:layout_below="@+id/ct_destination_editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:id="@+id/ct_depart_date_imgbtn" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_today"
        android:layout_below="@+id/ct_destination_editText"
        android:layout_toRightOf="@+id/ct_depart_date_imgbtn"
        android:layout_toEndOf="@+id/ct_depart_date_imgbtn"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:id="@+id/ct_return_date_imgbtn" />

    <TextView
        android:text="@string/return_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ct_depart_date_imgbtn"
        android:layout_toLeftOf="@+id/ct_return_date_imgbtn"
        android:layout_toStartOf="@+id/ct_return_date_imgbtn"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="19dp"
        android:id="@+id/ct_depart_date_txtvw" />

    <TextView
        android:text="@string/depart_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ct_depart_date_txtvw"
        android:layout_alignRight="@+id/ct_return_date_imgbtn"
        android:layout_alignEnd="@+id/ct_return_date_imgbtn"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp"
        android:id="@+id/ct_return_date_txtvw" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_search"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/ct_search_imgbtn" />
    </RelativeLayout>
</ScrollView>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ct_listView"/>


</LinearLayout>
